# hello-cmake

./: .gitignore  CMakeLists.txt  main.cc
greeter/: CMakeLists.txt  greeter.cc  greeter.h
